images/favicon: replace favicon with white sq so a+ is not shown fixes #347 and assets/base: increase header font sizes on mobile fixes  #382

--- a/adhocracy-plus/assets/scss/_base.scss
+++ b/adhocracy-plus/assets/scss/_base.scss
@@ -80,7 +80,7 @@ h6 {
     h3,
     h4,
     h5 {
-        font-size: $font-size-md;
+        font-size: $font-size-lg;
     }
 }
 
@@ -107,7 +107,7 @@ h6 {
     h3,
     h4,
     h5 {
-        font-size: $font-size-base;
+        font-size: $font-size-md;
     }
 }
 
